--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -20,7 +20,7 @@ jobs:
 
     - uses: actions/delete-package-versions@v5
       with: 
-       package-name: 'kfox'
+       package-name: 'protect-transcription'
        package-type: 'container'
        min-versions-to-keep: 3
        ignore-versions: '^(0|[1-9]\\d*)\\.0\\.0$'
